@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.59:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.60:
 
 Epson EC 4020 Series
 Epson EC 4030 Series
@@ -25,6 +25,7 @@ Epson ET 3840 Series
 Epson ET 3850 Series
 Epson ET 4750 Series
 Epson ET 4760 Series
+Epson ET 4810 Series
 Epson ET 4850 Series
 Epson ET 5150 Series
 Epson ET 5170 Series
