@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.58-1lsb3.2.i486.rpm 3664807 BLAKE2B b45b71b46bc2b14340ac263c9f849ac310dc3547a7400b396ba7d0be30f96fc67613ad873ee3361b5b6d30614db46af3ada01ad04b0e5511e3749421e9afd79f SHA512 601873a1f485c4cbf4c9d69f22fc58815fb1abc1fbc653880e69395462060a6ef1545bf3d14d3c0f4494c718c28321f34f4141e8c1f0f43760fb7ea1bd2a5764
-DIST epson-inkjet-printer-escpr2-1.1.58-1lsb3.2.x86_64.rpm 3664212 BLAKE2B 4ccfc2132757516052566a97f60ba4cf0e90e8c9f9751dcb26bdc403df9ea14ba6f4d28edc00e91c3d06cdc822a614a43d1c896d30765927b1f6e4533c3d8566 SHA512 21372e2ae104108d0f4c54bb916118e4a82d3667224f85772912991fb19df58e712e70ee43c40cdb9d300435b7be1ee6b4629c5331a3f48039cdebde192b3a1a
 DIST epson-inkjet-printer-escpr2-1.1.59-1lsb3.2.i486.rpm 3682591 BLAKE2B 9d65b0456b0d076130d0c3fd813545b44a7cf9640a0f667246496e58ff3e3ace276d72ce5238040996c3277770096ab49dab7df9bb3fcc3e8bf5d9661d01e467 SHA512 e8f0f09f0b2c7de4d10aedadcc0b259b8ce2f07a1c0941d0e498a6d6d906b19b69a94bfdc4c160be79e002efa63550a5fd88e76983d98794dc4d5b5dc67c16b1
 DIST epson-inkjet-printer-escpr2-1.1.59-1lsb3.2.x86_64.rpm 3681961 BLAKE2B 314e002deb977aba9ef278f1016ae6c77dc5b270e76f3e267d70e306029965d3bcecdc6423adb6eb1a17ee3e8a26923bc8e17c7f48ac86965e5c641482855380 SHA512 e35e475dadfd06fd9c930f56c52ccd470ea3231c517b0129bb07355806a5f151a8c31a46570c312f176ac4fd8eb072095cdc903ebec187f060f34d082deb5790
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.58.ebuild 1670 BLAKE2B 7343a120ebe0e726c8eb1cc260b5eec66c616a1e0c6054875bca06ff4fd018250261410e134970f020bc25543725d24bdb23e5244c50a0febe43ecdcab017ef2 SHA512 9f4aaac65b08d4aa6905e16cb47cfdf6fe6c381aedd9124b618f0d41a3a1253c060613cc63aac9837f7d5d3b37bd7115c49f28a9f7ac730ba3bfb2124ebb08c3
+DIST epson-inkjet-printer-escpr2-1.1.60-1lsb3.2.i486.rpm 3646971 BLAKE2B b4b4605492e4a8881704a87d6b0ac644d42e6d3acef6065f1c580fe34dff688895d87811d073078eb77c9613ee5d56d99de6098ba34a1eb834afc3f1f6566034 SHA512 33c1cd023d5e11af9049654a6950af06c7ed3826e225e81c76cd2eecbfbd4f7de72ad5d5d489346f1e792910c8cd1c8e2517095b7e6b01e7e012dc39efa02c5a
+DIST epson-inkjet-printer-escpr2-1.1.60-1lsb3.2.x86_64.rpm 3646300 BLAKE2B 123cf553264977b4f91534ce24f9bda9579328c8b624e9971947c9bf33601f89e3152fe0d002fc2f32260344bea1df722705e00fa4fb87dcda12e8b2be07a601 SHA512 e6db76d24501338d887be697788988d0cf86cbe79024dff4d148d417937d162ddf16608055a2eca0fea7d6ec04ebe2768ab53fe33dc3d1d9de3fc943bd95c4a1
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.59.ebuild 1670 BLAKE2B 2d50a5e5794d4909286a107e9afc796454d62f7ed3eab3ba1f2cc21687d686acc3887a30ba5b67541e387d037b8af4f49fb5d69f0437f6aa5afada0d8f199e99 SHA512 3d6af3de717ba3688e290fef84f5e27ec71aca7eef1f56d8548e0c10d2fd6f76199edb339325630eea2f1f308f2eee3b9192be97027e4e4773f095f9ed4fc579
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.60.ebuild 1670 BLAKE2B acd3850dc831179f0b9ce925635cc4049b19ee873db592aa66af40b89b8d52d30ed6d7f5042327927ef59e9b3c944902261de3bcffeffcdc8435c228de7e527d SHA512 6e91ae657ac04ef654379608354f0f41522a95886eb9a98f45206e9c9bcb45ccf4ada6a88cb3e39443c56e2d195d8f1a764f7493d2aaa747e13609cd259b10f4
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
